updated footer links

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 <hr>
 <div class="container footer">
     <div class="col-md-3">
-    	Links
+    	<a href="github.com/tsekylekobie/" target="_blank">Github</a> | 
+		<a href="www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a> | 
+		<a href="mailto:tse.kylekobie@berkeley.edu">Email</a>
 	</div>
-	<div class="text-center col-md-3 col-md-offset-6">
+	<div class="col-md-3" style="float:right;">
 		<p class="text-right">Last updated December 2017</p>
 	</div>
 </div>
