--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <hr>
 <div class="container footer">
     <div class="col-md-3">
-    	<a href="github.com/tsekylekobie/" target="_blank">Github</a> | 
-		<a href="www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a> | 
+    	<a href="http://github.com/tsekylekobie/" target="_blank">Github</a> | 
+		<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a> | 
 		<a href="mailto:tse.kylekobie@berkeley.edu">Email</a>
 	</div>
 	<div class="col-md-3" style="float:right;">
