added sections and navbar

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About | Kyle Tse</title>
+<title>Kyle Tse</title>
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<link href="main.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,11 +18,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-	
 <body>
-<div class="container-fluid">
+<div class="container" id="navbar">
+	<a href="#about">About</a>
+	<a href="#skills">Skills</a>
+	<a href="#projects">Projects</a>
+  <a href="resume.pdf" target="_blank">Resume</a>
 </div>
-<div class="container">
+<div class="container" id="body">
+<div class="container" id="about">
     <img class="profile" src="kyle.jpg" alt="Kyle"/>
 	<div class="about-text">
 		<h1 id="name">Kyle Tse</h1>
@@ -34,10 +38,21 @@
 	</div>
 </div>
 <hr>
-<div class="container footer">
+<div class="container" id="skills">
+	<h1>Skills</h1>
+	Work in Progress
+</div>
+<hr>
+<div class="container" id="projects">
+	<h1>Projects</h1>
+	Work in Progress
+</div>
+<hr>
+</div>
+<div class="container" id="footer">
     <div class="col-md-3">
-    	<a href="http://github.com/tsekylekobie/" target="_blank">Github</a> | 
-		<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a> | 
+    	<a href="http://github.com/tsekylekobie/" target="_blank">Github</a>|
+		<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a>|
 		<a href="mailto:tse.kylekobie@berkeley.edu">Email</a>
 	</div>
 	<div class="col-md-3" style="float:right;">
