--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
