--- a/index.html
+++ b/index.html
@@ -11,59 +11,60 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 <link href="css/main.css" rel="stylesheet">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
-<div class="container" id="navbar">
-	<a href="#about">About</a>
-	<a href="#skills">Skills</a>
-	<a href="#projects">Projects</a>
-  <a href="resume.pdf" target="_blank">Resume</a>
-</div>
-<div class="container" id="body">
-<div class="container" id="about">
-    <img class="profile" src="kyle.jpg" alt="Kyle"/>
-	<div class="about-text">
-		<h1 id="name">Kyle Tse</h1>
-		<p id="details">
-			I'm a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
-			During my spare time, I enjoy singing, learning about the world, and watching the NBA and competitive Super Smash Bros.<br><br>
-			Thanks for checking out my website!
-		</p>
+	
+	<div class="container" id="big-container">
+		<div class="container" id="body">
+			<div class="container" id="sidebar">
+				<i>+Shortcuts</i><br>
+				<a href="#about">About</a><br>
+				<a href="#skills">Skills</a><br>
+				<a href="#projects">Projects</a><br>
+				<a href="resume.pdf" target="_blank">Resume (PDF)</a><br>
+				
+				<br>
+				
+				<i>+Contact Info</i><br>
+				<a href="http://github.com/tsekylekobie/" target="_blank">Github</a><br>
+				<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a><br>
+				<a href="mailto:tse.kylekobie@berkeley.edu">Email</a><br>
+			</div>
+			
+			<div class="container section" id="about">
+				<div class="content">
+					<h1 id="name">Kyle Tse</h1>
+					I'm a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
+					During my spare time, I enjoy singing, learning about the world, and watching the NBA and competitive Super Smash Bros.<br><br>
+					Thanks for checking out my website!
+				</div>
+			</div>
+			
+			<div class="container section" id="skills">
+				<div class="content">
+					<h1>Skills</h1>
+					Work in Progress
+				</div>
+			</div>
+			
+			<div class="container section" id="projects">
+				<div class="content">
+					<h1>Projects</h1>
+					Work in Progress
+				</div>
+			</div>
+		</div>
+		
+		<hr>
+		<div class="container" style="text-align: center; margin: 10px;" id="footer">
+			Last updated December 2017
+		</div>
 	</div>
-</div>
-<hr>
-<div class="container" id="skills">
-	<h1>Skills</h1>
-	Work in Progress
-</div>
-<hr>
-<div class="container" id="projects">
-	<h1>Projects</h1>
-	Work in Progress
-</div>
-<hr>
-</div>
-<div class="container" id="footer">
-    <div class="col-md-3">
-    	<a href="http://github.com/tsekylekobie/" target="_blank">Github</a>|
-		<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a>|
-		<a href="mailto:tse.kylekobie@berkeley.edu">Email</a>
-	</div>
-	<div class="col-md-3" style="float:right;">
-		<p class="text-right">Last updated December 2017</p>
-	</div>
-</div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-1.11.3.min.js"></script>
-
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/bootstrap.js"></script>
-<script src="js/main.js"></script>
+	
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+	<script src="js/jquery-1.11.3.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed --> 
+	<script src="js/bootstrap.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
