updated project section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 <link href="css/main.css" rel="stylesheet">
 
 </head>
@@ -19,7 +19,6 @@
 			<div class="container" id="sidebar">
 				<i>+Shortcuts</i><br>
 				<a href="#about">About</a><br>
-				<a href="#skills">Skills</a><br>
 				<a href="#projects">Projects</a><br>
 				<a href="resume.pdf" target="_blank">Resume (PDF)</a><br>
 				
@@ -35,22 +34,46 @@
 				<div class="content">
 					<h1 id="name">Kyle Tse</h1>
 					I'm a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
-					During my spare time, I enjoy singing, learning about the world, and watching the NBA and competitive Super Smash Bros.<br><br>
-					Thanks for checking out my website!
-				</div>
-			</div>
-			
-			<div class="container section" id="skills">
-				<div class="content">
-					<h1>Skills</h1>
-					Work in Progress
+					During my spare time, I enjoy singing, watching the NBA, and keeping up with competitive Super Smash Bros.<br><br>
+					Below are some of the projects that I have worked on.
 				</div>
 			</div>
 			
 			<div class="container section" id="projects">
 				<div class="content">
 					<h1>Projects</h1>
-					Work in Progress
+					<div class="card-deck">
+						<div class="card">
+  							<!--<img class="card-img-top" src="..." alt="Screenshot">-->
+							<div class="card-body">
+   								<h3 class="card-title">Halcyon Stats</h3>
+								<p class="card-subtitle mb-2 text-muted">Website to view stats in Vainglory.</p>
+    							<p class="card-text">
+									A personal project where I scraped data using the new Vainglory API. With this website, a user can view any player's overall and per game stats. I used this opportunity to learn more about REST and to build something for a game that I enjoy playing.
+									<a href="https://github.com/tsekylekobie/halcyon-stats" target="_blank">View code</a>
+								</p>
+  							</div>
+							<div class="card-footer">
+								<span class="badge badge-pill badge-light">Ruby</span>
+								<span class="badge badge-pill badge-light">JavaScript</span>
+								<span class="badge badge-pill badge-dark">Ruby on Rails</span>
+								<span class="badge badge-pill badge-dark">Bootstrap</span>
+							</div>
+						</div>
+						<div class="card">	
+							<div class="card-body">
+   								<h3 class="card-title">Database</h3>
+								<p class="card-subtitle mb-2 text-muted">Small query database similar to SQL</p>
+    							<p class="card-text">
+									A class project for CS61B (Data Structures). With this, we were required to design a small relational database management system from scratch.
+									<a href="http://datastructur.es/sp17/materials/proj/proj2/proj2.html" target="_blank">View specs</a>
+								</p>
+							</div>
+							<div class="card-footer">
+								<span class="badge badge-pill badge-light">Java</span>
+							</div>
+  						</div>
+					</div>
 				</div>
 			</div>
 		</div>
