changed about section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			
 			<div class="container section" id="about">
 				<div class="content">
-					<h1 id="name">Kyle Tse</h1>
-					I'm a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
+					<h1>About Me</h1>
+					Hi! I'm Kyle, a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
 					During my spare time, I enjoy singing, watching the NBA, and keeping up with competitive Super Smash Bros.<br><br>
 					Below are some of the projects that I have worked on.
 				</div>
