--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<i>+Shortcuts</i><br>
 				<a href="#about">About</a><br>
 				<a href="#projects">Projects</a><br>
-				<a href="resume.pdf" target="_blank">Resume (PDF)</a><br>
+				<a href="assets/resume.pdf" target="_blank">Resume (PDF)</a><br>
 				
 				<br>
 				
@@ -33,6 +33,10 @@
 			</div>
 			
 			<div class="container section" id="about">
+				<div class="column">
+					<div class="circle">
+					</div>
+				</div>
 				<div class="content">
 					<h1>About Me</h1>
 					Hi! I'm Kyle, a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
@@ -42,89 +46,21 @@
 			</div>
 			
 			<div class="container section" id="projects">
+				<div class="column">
+					<div class="circle">
+						<img src="images/proj-icon.png" class="icon">
+					</div>
+				</div>
 				<div class="content">
 					<h1>Projects</h1>
-					<div class="card-deck">
-						<div class="card">
-  							<!--<img class="card-img-top" src="..." alt="Screenshot">-->
-							<div class="card-body">
-   								<h3 class="card-title">Halcyon Stats</h3>
-								<p class="card-subtitle mb-2 text-muted">Website to view stats in Vainglory.</p>
-								<button type="button" class="btn btn-sm btn-outline-info" data-toggle="modal" data-target="#halcyon">
-  									More info &rarr;
-								</button>
-  							</div>
-							<div class="card-footer">
-								<span class="badge badge-pill badge-light">Ruby</span>
-								<span class="badge badge-pill badge-light">JavaScript</span>
-								<span class="badge badge-pill badge-dark">Ruby on Rails</span>
-								<span class="badge badge-pill badge-dark">Bootstrap</span>
-							</div>
-							<div class="modal fade" id="halcyon" tabindex="-1" role="dialog" aria-labelledby="halcyonTitle" aria-hidden="true">
-								<div class="modal-dialog-centered proj-modal" role="document">
-							    	<div class="modal-content">
-							      		<div class="modal-header">
-							        		<h5 class="modal-title" id="halcyonTitle">Halcyon Stats</h5>
-							        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							          			<span aria-hidden="true">&times;</span>
-							        		</button>
-							      		</div>
-							      		<div class="modal-body">
-							      			<ul>
-												<li>A personal project where I scraped data using the new Vainglory API. I used this opportunity to learn more about REST and to build something for a game that I enjoy playing.</li>
-												<li>With this website, a user can view any player's overall and per game stats.</li>
-											</ul>
-							      		</div>
-							      		<div class="modal-footer">
-							        		<a href="https://github.com/tsekylekobie/halcyon-stats" class="btn btn-sm btn-primary" role="button" target="_blank">View code</a>
-							      		</div>
-							    	</div>
-								</div>
-							</div>
-						</div>
-						<div class="card">	
-							<div class="card-body">
-   								<h3 class="card-title">Database</h3>
-								<p class="card-subtitle mb-2 text-muted">Small query database similar to SQL</p>
-								<button type="button" class="btn btn-sm btn-outline-info" data-toggle="modal" data-target="#database">
-  									More info &rarr;
-								</button>
-							</div>
-							<div class="card-footer">
-								<span class="badge badge-pill badge-light">Java</span>
-							</div>
-							<div class="modal fade" id="database" tabindex="-1" role="dialog" aria-labelledby="databaseTitle" aria-hidden="true">
-								<div class="modal-dialog-centered proj-modal" role="document">
-							    	<div class="modal-content">
-							      		<div class="modal-header">
-							        		<h5 class="modal-title" id="databaseTitle">Database</h5>
-							        		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							          			<span aria-hidden="true">&times;</span>
-							        		</button>
-							      		</div>
-							      		<div class="modal-body">
-							      			<ul>
-												<li>A class project for CS61B (Data Structures). With this, we were required to design a small relational database management system from scratch.</li>
-												<li>Some features that I implemented include table creation, row parsing, and 'select' operations.</li>
-											</ul>
-							      		</div>
-							      		<div class="modal-footer">
-							        		<a href="http://datastructur.es/sp17/materials/proj/proj2/proj2.html" class="btn btn-sm btn-primary" role="button" target="_blank">View specs</a>
-							      		</div>
-							    	</div>
-								</div>
-							</div>
-  						</div>
-					</div>
+					<div class="card-deck" id="proj-cards"></div>
 				</div>
 			</div>
 		</div>
-		
-		<div class="footer">
-			<hr>
+	</div>
+	<div class="footer">
 			Last updated December 2017
 		</div>
-	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="js/jquery-1.11.3.min.js"></script>
