added project images and project tabs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-	
+
 	<div id="big-container">
 		<div class="container" id="body">
 			<div class="container" id="sidebar">
@@ -23,48 +23,43 @@
 				<a href="#about">About</a><br>
 				<a href="#projects">Projects</a><br>
 				<a href="assets/resume.pdf" target="_blank">Resume (PDF)</a><br>
-				
+
 				<br>
-				
+
 				<i>+Contact Info</i><br>
 				<a href="http://github.com/tsekylekobie/" target="_blank">Github</a><br>
 				<a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a><br>
 				<a href="mailto:tse.kylekobie@berkeley.edu">Email</a><br>
 			</div>
-			
+
 			<div class="container section" id="about">
-				<div class="column">
-					<div class="circle">
-					</div>
-				</div>
 				<div class="content">
 					<h1>About Me</h1>
 					Hi! I'm Kyle, a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
-					During my spare time, I enjoy singing, watching the NBA, and keeping up with competitive Super Smash Bros.<br><br>
 					Below are some of the projects that I have worked on.
 				</div>
 			</div>
-			
+
 			<div class="container section" id="projects">
-				<div class="column">
-					<div class="circle">
-						<img src="images/proj-icon.png" class="icon">
-					</div>
-				</div>
 				<div class="content">
 					<h1>Projects</h1>
-					<div class="card-deck" id="proj-cards"></div>
+					<div class="proj-tabs-vertical">
+						<div class="proj-tab" id="halcyon">Halcyon Stats</div>
+						<div class="proj-tab" id="database">Database</div>
+					</div>
+					<div id="proj-display"></div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="footer">
-			Last updated December 2017
-		</div>
-	
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+		<hr>
+		Last updated December 2017
+	</div>
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="js/jquery-1.11.3.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed --> 
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.js"></script>
 	<script src="js/main.js"></script>
 </body>
