new about section

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 			<div class="container section" id="about">
 				<div class="content col-md-7">
 					<h1>About Me</h1>
-					Hi! I'm Kyle, a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.<br><br>
-					Below are some of the projects that I have worked on.
+					<p> Hi! I'm Kyle, a second year undergraduate at UC Berkeley studying Computer Science and Cognitive Science.</p>
+					<p>I enjoy singing, playing volleyball, and learning new things during my free time.</p>
+					<p>This website is still a work in progress but check out some of my projects below!</p>
 				</div>
 				
 				<img class="col-md-3" src="images/profile.jpg" alt="Kyle">
@@ -44,9 +45,9 @@
 
 			<div class="container section" id="projects">
 				<div class="content">
-					<h1>Projects</h1>
-					<div class="proj-tabs-vertical">
-						<div class="proj-tab active" id="halcyon">Halcyon Stats</div>
+				  <h1>Projects</h1>
+				  <div class="proj-tabs-vertical">
+					<div class="proj-tab active" id="halcyon">Halcyon Stats</div>
 						<div class="proj-tab" id="database">Database</div>
 					</div>
 					
