--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+<!-- Icons -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <!-- Custom CSS -->
 <link href="css/main.css" rel="stylesheet">
 <link href="css/buttons.css" rel="stylesheet">
@@ -20,28 +22,21 @@
 		<div id="container">
 			<div id="title">Kyle Tse</div>
 			<div id="links">
-				<div class="link" id="about">About</div>
-				<div class="link" id="misc">Misc</div>
-				<div class="link" id="contact">Contact</div>
-			</div>
-			<hr>
-			<div class="display" id="about-text">
-				- Sophomore at UC Berkeley <br>
-				- Computer & Cognitive Science <br>
-				- Lakers and OKC fan <br>
-				- Loves board games <br>
-				- Always singing R&B <br>
-			</div>
-			
-			<div class="display" id="misc-text">
-				Stay tuned.
-			</div>
-			
-			<div class="display" id="contact-text">
-				- <a href="http://github.com/tsekylekobie/" target="_blank">Github</a><br>
-				- <a href="http://www.linkedin.com/in/kyle-tse/" target="_blank">LinkedIn</a><br>
-				- <a href="mailto:tse.kylekobie@berkeley.edu">Email</a><br>
-				- <a href="assets/KyleTse.pdf" target="_blank">Resume (PDF)</a>
+				<a class="link" href="https://github.com/tsekylekobie" target="_blank">
+					<i class="fab fa-github"></i>
+				</a>
+				<a class="link" href="mailto:tse.kylekobie@berkeley.edu" target="_blank">
+					<i class="far fa-envelope"></i>
+				</a>
+				<a class="link" href="https://www.linkedin.com/in/kyle-tse/" target="_blank">
+					<i class="fab fa-linkedin-in"></i>
+				</a>
+				<a class="link" href="assets/KyleTse.pdf" target="_blank">
+					<i class="far fa-file"></i>
+				</a>
+				<a class="link" href="https://open.spotify.com/user/tse.kylekobie" target="_blank">
+					<i class="fab fa-spotify"></i>
+				</a>
 			</div>
 		</div>
 	</div>
